# dwind-nodes

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  index.html
.github/workflows/: ci.yml  pages.yml
crates/nodegraph-core/: Cargo.toml
crates/nodegraph-core/src/: lib.rs
crates/nodegraph-core/src/commands/: mod.rs  tests.rs
crates/nodegraph-core/src/graph/: connection.rs  frame.rs  group.rs  mod.rs  node.rs  port.rs  reroute.rs
crates/nodegraph-core/src/interaction/: mod.rs  tests.rs
crates/nodegraph-core/src/layout/: mod.rs
crates/nodegraph-core/src/search/: mod.rs
crates/nodegraph-core/src/serialization/: mod.rs
crates/nodegraph-core/src/store/: change.rs  component.rs  entity.rs  mod.rs  query.rs  tests.rs
crates/nodegraph-core/src/types/: mod.rs  socket_type.rs  value.rs
crates/nodegraph-core/src/viewport/: mod.rs
crates/nodegraph-demo/: Cargo.toml  index.html
crates/nodegraph-demo/src/: lib.rs
crates/nodegraph-render/: Cargo.toml
crates/nodegraph-render/src/: connection_view.rs  context_menu.rs  event_bridge.rs  frame_view.rs  graph_callbacks.rs  graph_signals.rs  lib.rs  minimap_view.rs  node_view.rs  search_menu.rs  theme.rs  viewport_view.rs
crates/nodegraph-render/tests/: connection_position.rs  theme_minimap.rs
crates/nodegraph-runtime/: Cargo.toml
crates/nodegraph-runtime/src/: bridge.rs  computation.rs  const_node.rs  conversion.rs  lib.rs  params.rs  runtime.rs  store.rs  value.rs
crates/nodegraph-widgets/: Cargo.toml
crates/nodegraph-widgets/src/: bool_input.rs  color_input.rs  float_input.rs  int_input.rs  lib.rs  string_input.rs
docs/: tutorial.md
examples/texture-generator/: Cargo.toml  index.html
examples/texture-generator/src/: computations.rs  eval.rs  lib.rs  nodes.rs  params.rs  preview.rs  reactive_eval.rs  texture.rs
examples/trivial-calculator/: Cargo.toml  index.html
examples/trivial-calculator/src/: lib.rs
