[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nodegraph-core = { path = "crates/nodegraph-core" }
nodegraph-render = { path = "crates/nodegraph-render" }
dominator = "0.5"
dwind = "0.7"
dwind-macros = "0.4"
futures-signals = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_error_panic_hook = "0.1"
futures-signals-component-macro = "0.2"
nodegraph-widgets = { path = "crates/nodegraph-widgets" }
nodegraph-runtime = { path = "crates/nodegraph-runtime" }
