[package]
name = "nodegraph-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nodegraph-core = { workspace = true }
nodegraph-render = { workspace = true }
dominator = { workspace = true }
dwind = { workspace = true }
dwind-macros = { workspace = true }
futures-signals = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
console_error_panic_hook = { workspace = true }
