[package]
name = "nodegraph-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nodegraph-core = { workspace = true }
dominator = { workspace = true }
dwind = { workspace = true }
dwind-macros = { workspace = true }
futures-signals = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "HtmlElement",
    "SvgElement",
    "SvgPathElement",
    "SvgsvgElement",
    "MouseEvent",
    "WheelEvent",
    "Element",
    "DomRect",
    "CssStyleDeclaration",
] }
