[package]
name = "nodegraph-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nodegraph-core = { workspace = true }
dominator = { workspace = true }
dwind = { workspace = true }
dwind-macros = { workspace = true }
futures-signals = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = "0.3"
web-sys = { workspace = true, features = [
    "console",
    "HtmlElement",
    "SvgElement",
    "SvgPathElement",
    "SvgsvgElement",
    "MouseEvent",
    "WheelEvent",
    "Element",
    "DomRect",
    "CssStyleDeclaration",
    "Document",
    "Window",
    "NodeList",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
