[package]
name = "trivial-calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nodegraph-core = { path = "../../crates/nodegraph-core" }
nodegraph-render = { path = "../../crates/nodegraph-render" }
wasm-bindgen = { workspace = true }
dominator = { workspace = true }
dwind = { workspace = true }
console_error_panic_hook = { workspace = true }
nodegraph-widgets = { workspace = true }
serde_json = { workspace = true }
futures-signals = { workspace = true }
wasm-bindgen-futures = { workspace = true }
